# myp

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  first_spec.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/agents/: backend-dev.md  designer.md  editor-dev.md  frontend-dev.md  lead.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/prompts/presets/: character-partner.md  consistency-checker.md  first-reader.md  plot-editor.md  style-reviewer.md
src-tauri/src/: lib.rs  main.rs  utils.rs
src-tauri/src/commands/: chat.rs  file.rs  memo.rs  mod.rs  project.rs  prompts.rs  settings.rs  task.rs  writing_log.rs
src/components/chat/: AgentSelector.tsx  ChatHistory.tsx  ChatInput.tsx  ChatMessage.tsx  ChatPanel.tsx
src/components/dashboard/: Heatmap.tsx  NewProjectModal.tsx  ProjectCard.tsx  StatsOverview.tsx  WeeklyStats.tsx
src/components/editor/: Editor.tsx  EditorLayout.tsx  (+7 more)
src/hooks/: useAutoSave.ts  useCharacterCount.ts  useEditor.ts  useWritingMode.ts
src/lib/: ai-service.ts  events.ts  tauri-commands.ts
src/pages/: Editor.tsx  Home.tsx  HomePage.tsx  ProjectDetail.tsx  ProjectPage.tsx  Settings.tsx  SettingsPage.tsx
src/stores/: chatStore.ts  editorStore.ts  projectStore.ts  settingsStore.ts  writingLogStore.ts
src/styles/: component-specs.md  design-tokens.ts  globals.css  mui-theme.ts  tailwind-theme.ts  theme-presets.ts  typography.ts
src/types/: chat.ts  commands.ts  index.ts  memo.ts  project.ts  settings.ts  task.ts  writing-log.ts
(+24 files in other folders)
